<resources>
    <string name="app_name">FirstApp</string>
    <string name="hello">Hello, World!</string>
    <string name="number0">0</string>
    <string name="number1">1</string>
    <string name="number2">2</string>
    <string name="number3">3</string>
    <string name="number4">4</string>
    <string name="number5">5</string>
    <string name="number6">6</string>
    <string name="number7">7</string>
    <string name="number8">8</string>
    <string name="number9">9</string>
    <string name="addSymbol">+</string>
    <string name="divideSymbol">÷</string>
    <string name="multiplySymbol">x</string>
    <string name="deductSymbol">−</string>
    <string name="clearSymbol">C</string>
    <string name="backspaceSymbol">←</string>
    <string name="equalsSymbol">=</string>
    <string name="title_activity_color2">Color2Activity</string>
</resources>
