<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="android.anna.firstapp.MainActivity">

    <android.support.constraint.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="255dp" />

    <Button
        android:id="@+id/button1"
        style="@style/numberButton"
        android:layout_marginBottom="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="0dp"
        android:text="@string/number1"
        app:layout_constraintBottom_toBottomOf="@+id/button2"
        app:layout_constraintRight_toLeftOf="@+id/button2"
        app:layout_constraintTop_toTopOf="@+id/button2"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/button2"
        style="@style/numberButton"
        android:layout_marginRight="0dp"
        android:text="@string/number2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/button3"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.498"
        android:layout_marginBottom="0dp" />

    <Button
        android:id="@+id/button3"
        style="@style/numberButton"
        android:layout_marginBottom="0dp"
        android:layout_marginTop="0dp"
        android:text="@string/number3"
        app:layout_constraintBottom_toBottomOf="@+id/button2"
        app:layout_constraintTop_toTopOf="@+id/button2"
        app:layout_constraintVertical_bias="0.0"
        android:layout_marginRight="0dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Button
        android:id="@+id/button4"
        style="@style/numberButton"
        android:layout_marginBottom="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="0dp"
        android:text="@string/number4"
        app:layout_constraintBottom_toBottomOf="@+id/button5"
        app:layout_constraintRight_toLeftOf="@+id/button5"
        app:layout_constraintTop_toTopOf="@+id/button5"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/button5"
        style="@style/numberButton"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="0dp"
        android:text="@string/number5"
        app:layout_constraintLeft_toLeftOf="@+id/button2"
        app:layout_constraintRight_toLeftOf="@+id/button3"
        app:layout_constraintTop_toBottomOf="@+id/button2"
        app:layout_constraintHorizontal_bias="0.0" />

    <Button
        android:id="@+id/button6"
        style="@style/numberButton"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="0dp"
        android:text="@string/number6"
        app:layout_constraintBottom_toBottomOf="@+id/button5"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintTop_toTopOf="@+id/button5"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintLeft_toRightOf="@+id/button5"
        app:layout_constraintRight_toLeftOf="@+id/guideline" />

    <Button
        android:id="@+id/button7"
        style="@style/numberButton"
        android:layout_marginBottom="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="0dp"
        android:text="@string/number7"
        app:layout_constraintBottom_toBottomOf="@+id/button8"
        app:layout_constraintRight_toLeftOf="@+id/button8"
        app:layout_constraintTop_toTopOf="@+id/button8"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/button8"
        style="@style/numberButton"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="0dp"
        android:text="@string/number8"
        app:layout_constraintLeft_toLeftOf="@+id/button5"
        app:layout_constraintTop_toBottomOf="@+id/button5"
        app:layout_constraintRight_toRightOf="@+id/button5" />

    <Button
        android:id="@+id/button9"
        style="@style/numberButton"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="0dp"
        android:text="@string/number9"
        app:layout_constraintBottom_toBottomOf="@+id/button8"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintRight_toLeftOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="@+id/button8"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintLeft_toRightOf="@+id/button8" />

    <Button
        android:id="@+id/buttonClear"
        style="@style/operationButton"
        android:layout_marginBottom="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="0dp"
        android:text="@string/clearSymbol"
        app:layout_constraintBottom_toBottomOf="@+id/button0"
        app:layout_constraintRight_toLeftOf="@+id/button0"
        app:layout_constraintTop_toTopOf="@+id/button0"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/button0"
        style="@style/numberButton"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="0dp"
        android:text="@string/number0"
        app:layout_constraintLeft_toLeftOf="@+id/button8"
        app:layout_constraintRight_toLeftOf="@+id/button9"
        app:layout_constraintTop_toBottomOf="@+id/button8"
        app:layout_constraintHorizontal_bias="0.0" />

    <Button
        android:id="@+id/buttonBackspace"
        style="@style/operationButton"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="0dp"
        android:text="@string/backspaceSymbol"
        app:layout_constraintBottom_toBottomOf="@+id/button0"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintRight_toLeftOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="@+id/button0"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintLeft_toRightOf="@+id/button0" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="180dp" />

    <Button
        android:id="@+id/buttonAdd"
        android:text="@string/addSymbol"
        style="@style/operationButton"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toRightOf="@+id/button9"
        app:layout_constraintTop_toTopOf="@+id/button9"
        android:layout_marginTop="0dp"
        app:layout_constraintVertical_bias="0.501"
        android:layout_marginBottom="0dp"
        app:layout_constraintBottom_toTopOf="@+id/buttonBackspace" />
    <Button
        android:id="@+id/buttonDeduct"
        android:text="@string/deductSymbol"
        style="@style/operationButton"
        app:layout_constraintLeft_toRightOf="@+id/buttonAdd"
        android:layout_marginLeft="0dp"
        app:layout_constraintTop_toTopOf="@+id/buttonAdd"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="0dp"
        app:layout_constraintBottom_toTopOf="@+id/buttonMultiply"
        app:layout_constraintVertical_bias="0.0" />
    <Button
        android:id="@+id/buttonMultiply"
        android:text="@string/multiplySymbol"
        style="@style/operationButton"
        app:layout_constraintTop_toTopOf="@+id/buttonBackspace"
        android:layout_marginTop="0dp"
        app:layout_constraintBottom_toBottomOf="@+id/buttonBackspace"
        android:layout_marginBottom="0dp"
        app:layout_constraintLeft_toRightOf="@+id/buttonBackspace"
        android:layout_marginLeft="0dp" />
    <Button
        android:id="@+id/buttonDivide"
        android:text="@string/divideSymbol"
        style="@style/operationButton"
        app:layout_constraintTop_toTopOf="@+id/buttonMultiply"
        app:layout_constraintBottom_toBottomOf="@+id/buttonMultiply"
        app:layout_constraintVertical_bias="0.599"
        app:layout_constraintLeft_toRightOf="@+id/buttonMultiply"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="0dp" />
    <Button
        android:id="@+id/buttonEquals"
        android:text="@string/equalsSymbol"
        style="@style/equalsButton"
        app:layout_constraintTop_toTopOf="@+id/button3"
        android:layout_marginTop="0dp"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toRightOf="@+id/button6" />

    <TextView
        android:id="@+id/currentValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="0dp"
        android:layout_marginTop="0dp"
        app:layout_constraintRight_toRightOf="@+id/buttonEquals"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginBottom="0dp"
        app:layout_constraintBottom_toTopOf="@+id/buttonEquals" />

    <TextView
        android:id="@+id/firstValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="0dp"
        app:layout_constraintBottom_toTopOf="@+id/currentValue"
        app:layout_constraintRight_toRightOf="@+id/buttonEquals"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/big_red_button"
        android:text="Big\nred\nbutton"
        app:layout_constraintBottom_toTopOf="@+id/button3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:onClick="bigRedButtonClick"/>

</android.support.constraint.ConstraintLayout>
